[package]
name = "bpf-script-derive"
version = "0.5.2"
edition = "2021"
categories = ["parser-implementations", "data-structures"]
homepage = "https://github.com/arcjustin/bpf-script-derive"
keywords = ["linux", "script", "bpf", "parser", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-script-derive"
description = "Macros for the bpf-script crate."

[dependencies]
bpf-script = "0.5.2"
darling = "0.14.1"
proc-macro2 = "1.0.47"
quote = "1.0"
regex = "1.6.0"
syn = "1.0"

[lib]
proc-macro = true
